# RoadSafety_Dar

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOY.md  Dockerfile  Dockerfile.local  LOCAL_SETUP.md  Makefile  Procfile  README.md  README_DEPLOY.md  build.sh  conftest.py  docker-compose.yml  manage.py  package.json  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
accidents/: admin.py  apps.py  auth_views.py  decorators.py  factories.py  forms.py  locations.py  middleware.py  models.py  signals.py  telegram_bot.py  test_factories.py  test_locations.py  tests.py  urls.py  views.py
accidents/locale/sw/LC_MESSAGES/: django.po
accidents/management/commands/: data_quality_report.py  detect_fatal_clusters.py  generate_monthly_report.py  import_accidents.py  migrate_to_postgis.py  seed_accidents.py  seed_junctions.py  send_daily_digest.py
accidents/migrations/: 0001_initial.py  0002_junction_district_and_more.py  0003_add_slug_h3_cell.py  0004_backfill_slug_h3_cell.py  0005_userprofile.py  0006_userprofile_email_notifications.py  0007_auditlog.py  0008_demo_data_fields.py  0009_alter_userprofile_options_userprofile_avatar_url_and_more.py  0010_accident_submitted_by_accident_trust_level_and_more.py  0011_accident_official_notes_accident_rejection_reason_and_more.py  0012_accident_photo_url.py  0013_accident_district.py  0014_accident_ward_and_location_id.py
accidents/services/: __init__.py  recommendations.py  spatial.py  supabase_auth.py
accidents/static/: manifest.json  sw.js
accidents/static/css/: app.css
accidents/static/js/: featured_stat_card.js
accidents/templates/accidents/: 403.html  admin_users.html  api_docs.html  auth_callback.html  authority.html  base.html  dashboard.html  editor_accident_detail.html  editor_queue.html  login.html  my_reports.html  offline.html  register.html  report.html
accidents/templates/accidents/partials/: _featured_stat_card.html
accidents/templates/account/: login.html  logout.html  signup.html
accidents/templates/account/email/: password_reset_key.html
accidents/templates/admin/: base_site.html  index.html
accidents/templates/emails/: alert_fatal.html  base_email.html  digest.html
accidents/views/: __init__.py  authority_views.py  editor_views.py  locations_api.py  pdf.py  public.py  reports.py  stats.py  telegram.py
docs/: USER_GUIDE.md
landing/: .gitignore  package-lock.json  package.json
landing/prisma/migrations/0_init/: migration.sql
landing/src/: middleware.ts
roadsafety/: settings.py  urls.py  version.py  wsgi.py
roadsafety/settings/: __init__.py  base.py  dev.py  prod.py
scripts/: data_check.py  health_check.py  setup.bat
